# mtr

c_files/omp_progs/simple_test_prog/: CMakeLists.txt  generalized_build.sh
c_files/omp_progs/simple_test_prog/numerical_integration/: build.sh  integration_serial.c  numerical_integration
c_files/omp_progs/simple_test_prog/simple_test/: build.sh  test.c
c_files/simple_proc/: CMakeLists.txt  build.sh
c_files/simple_proc/src/: CMakeLists.txt  alloc_struct.c  allocator.c  proc.c  test_structs.c
cpp_files/test/: test.cpp
cpp_files/yt_app/: main_server.cpp
haskell_files/: nat.hs  spotify_app.hs
haskell_files/99probs/: lists_q1_q10.hs
haskell_files/character_test/: Character.hs  Direction.hs
haskell_files/cis194/: cis_194_hw1.hs
haskell_files/graphs/: graph.hs
haskell_files/hangman/: README.md  hangman.hs  new_hangman.hs
haskell_files/leetcode/: leetcode.hs
haskell_files/opengl/: opengl.hs
haskell_files/other_progs/: a3.hs  add.hs  compress.hs  compression.hs  createFalseArray.hs  foldcheck.hs  hangman_old.hs  list_impl.hs  q1_q10.hs  shift_cipher.hs  sum.hs  toDigits.hs
haskell_files/pfpl/: 2.5_2.6.hs  ch3.hs  lambda_lang.hs
haskell_files/random_progs/: 03312026.hs  04012026.hs  04052026.hs
haskell_files/random_progs/render_04052026/: CHANGELOG.md  LICENSE  render04052026.cabal
haskell_files/random_progs/render_04052026/app/: Main.hs
haskell_files/random_progs/render_04052026/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
haskell_files/text_editor/: teditor.hs  text_editor_thoughts.md
python_files/: day_calculator.py
(+15 files in other folders)
